tests/miniJava/pos/000738_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( ( 0 ) ) while ( 0 ) { } else { } } }
