tests/miniJava/neg/003722_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 ) { } java else { } } }
